--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,8 @@
-html, body {
-  font-family: 'Raleway Variable', sans-serif;
-}
 
 body {
   margin: 0;
   font-size: 16px;
+  font-family: "Montserrat", sans-serif;
   display: flex;
   justify-content: center;
   width: 100%;
